--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-otp-inputs": "^7.4.0",
+    "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
