--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
@@ -17,6 +18,8 @@
     "react-native": "0.72.6",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-paper": "^5.11.2",
+    "react-native-reanimated": "^3.5.4",
     "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2"
   },
