--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^5.11.2",
     "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.4",
     "react-native-svg": "^14.0.0",
     "react-native-vector-icons": "^10.0.2"
   },
