--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.72.6",
     "react-native-confirmation-code-field": "^7.3.2",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.0.3",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-paper": "^5.11.2",
     "react-native-reanimated": "^3.5.4",
